src/test/ui/issues/issue-33464.stderr
error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:3:5
   |
LL | use abc::one_el;
   |     ^^^ maybe a missing crate `abc`?

error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:5:5
   |
LL | use abc::{a, bbb, cccccc};
   |     ^^^ maybe a missing crate `abc`?

error[E0432]: unresolved import `a_very_long_name`
  --> $DIR/issue-33464.rs:7:5
   |
LL | use a_very_long_name::{el, el2};
   |     ^^^^^^^^^^^^^^^^ maybe a missing crate `a_very_long_name`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
